code-checker/src/main/java/org/example/code/checker/parser/markdown/parser/MdParser.g4
parser grammar MdParser;

options { tokenVocab=MdLexer; }

@header { package org.example.code.checker.parser.markdown.parser; }

// document := blocks separated by newlines and/or blank tokens
document
  : (block (NEWLINE)+)* block? EOF
  ;

block
  : listItem
  | blankBlock
  | paragraph
  | headerBlock
  ;

// list items support optional leading INDENT/TAB tokens
// e.g. <INDENT:2>- item text
listItem
  : (INDENT | TAB)* (DASH | PLUS | STAR) inlineText?
  ;

// one or more blank markers possibly mixed with NEWLINEs
blankBlock
  : (BLANK | NEWLINE)+
  ;

// paragraph = a line without structural markers, i.e., pure TEXT (and optional SPACE_TOK)
paragraph
  : (SPACE_TOK)? TEXT
  ;

// <header:n> Title text
headerBlock
  : HEADER inlineText?
  ;

// inline text = optional SPACE_TOK then TEXT (consume the rest of the line as text)
inlineText
  : (SPACE_TOK)? TEXT
  ;
